Fix overflow and shortcode issue

--- a/packages/blocks-editor/src/blocks/Product/Product.css
+++ b/packages/blocks-editor/src/blocks/Product/Product.css
@@ -49,7 +49,7 @@
       }
 
       &__Link {
-        @apply hidden font-semibold tracking-wider border-2 border-vermillon text-vermillon hover:bg-vermillon hover:text-white px-2 md:px-4 md:py-1 rounded-md text-center lg:flex items-center;
+        @apply hidden font-semibold tracking-wider border-2 border-vermillon text-vermillon hover:bg-vermillon hover:text-white px-2 md:px-4 md:py-1 rounded-md text-center xl:flex items-center;
         
         &__Icon {
           @apply hidden md:block;
